store/src/styles/components/kiosk.scss
.hern-kiosk__idle-screen-container {
   height: 100vh;
   overflow: hidden;
   > footer {
      height: 12em;
      display: flex;
      padding: 0 1em;
      align-items: center;
      justify-content: space-around;
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      z-index: 9999;
   }
}
.hern-kiosk__idle-screen-image-slider {
}
.hern-kiosk__idle-screen-image {
   height: calc(100vh - 12em);
}
.hern-kiosk__idle-screen-video__background {
   filter: blur(8px);
   -webkit-filter: blur(15px);
   height: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: -1;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
}
.hern-kiosk__idle-screen-footer-logo {
   height: 8em;
   width: 8em;
}
.hern-kiosk__idle-screen-page-text {
   font-style: normal;
   font-weight: 700;
   font-size: 3em;

   // line-height: 93px;
}

// kiosk header
.hern-kiosk__kiosk-header-container {
   display: flex;
   justify-content: space-between;
   height: 100%;
   align-items: center;
}
.hern-kiosk__kiosk-header-logo {
   height: 7em;
   width: 7em;
}
.hern-kiosk__kiosk-language-option {
   > span:last-child {
      display: flex;
      align-items: center;
   }
}
.hern-kiosk__kiosk-language-flag-icon {
   width: 1.3em;
   height: 1.3em;
   border-radius: 10px;
   margin-right: 0.3em;
}

// fulfillment section
.hern-kiosk__fulfillment-section-container {
   // height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 10em);
   position: relative;
}
.hern-kiosk__fulfillment-section-bg-image {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -100000000;
   filter: blur(6px);
}
.hern-kiosk__fulfillment-options {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 4em;
}
.hern-kiosk__fulfillment-option {
   padding: 1em;
   background: #0f6bb166;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   width: 30em;
   height: 34em;
   border-radius: 1.5em;
}
.hern-kiosk_fulfillment-icon {
   height: calc(100% - 5em);
   display: flex;
   align-items: center;
   justify-content: center;
}
.hern-kiosk__kiosk-primary-button {
   width: calc(100% - 0.5em);
   height: 5em;
   border-radius: 1em;
   > span {
      font-size: 2em;
   }
}
.hern-kiosk__fulfillment-section-text {
   font-size: 4em;
   font-weight: 700;
   margin: 0.5em 0;
}

// menu page

// menu section
.hern-kiosk__menu-promotion-coupons {
   position: relative;
   margin: 1em;
   padding-top: 1em;
   z-index: 0;
   .ant-carousel .slick-slide img {
      padding: 0 1em;
   }
}
.hern-kiosk__menu-carousal-arrow {
   position: absolute;
   stroke: currentColor;
   bottom: calc(50% - 21px);
   z-index: 100000000000000;
   border-radius: 50%;
}
.hern-kiosk__menu-carousal-left-arrow {
   left: 0;
}
.hern-kiosk__menu-carousal-right-arrow {
   right: 0;
}
.ant-steps-item-active {
   .ant-steps-item-icon {
   }
   .ant-steps-item-title {
      font-size: 21px;
      font-weight: 600;
   }
}
.ant-steps-finish-icon {
   > svg {
      margin-bottom: 6px;
   }
}
.ant-steps-item-container {
   display: flex;
   align-items: center;
}
.hern-kiosk__step-bar-rtl {
   .ant-steps-item-title {
      margin: 0 12px 0 12px;
      &::after {
         right: 100%;
      }
      &:last-child {
         margin: 0 12px 0 0;
      }
   }
}
.hern-kiosk__step-bar-count {
   width: 45px;
   height: 45px;
   border-radius: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 600;
}
.hern-kiosk__menu-category-side-bar {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: auto;
   padding-top: 1em;
   &::-webkit-scrollbar {
      width: 6px;
   }
   &::-webkit-scrollbar-thumb {
      background: #e5f0f7;
      border-radius: 4px;
   }
   .ant-menu-item-selected {
      background-color: transparent !important;
      .hern-kiosk__menu-page-product-category {
         // border: 4px solid #0f6bb1;
         // box-sizing: border-box;
         border-radius: 4px;
      }
      .hern-kiosk__menu-page-product-category-title {
         // color: #0f6bb1;
      }
   }
}
.hern-kiosk__menu-header-col-2 {
   position: relative;
   margin: 1em 0;
   display: flex;
   justify-content: center;
}

.hern-kiosk__menu-page-product-category {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   padding: 1em 0;
}
.hern-kiosk__menu-category-name {
   font-size: 1.5em;
   margin: 0 0 1em 0;
   font-weight: 500;
}
.hern-kiosk__scroll-element:nth-last-child(1) {
   min-height: 100%;
}
.hern-kiosk__category-scroll-link {
   display: flex;
   flex-direction: column;
   align-items: center;
}
.hern-kiosk__menu-page-product-category-title {
   font-size: 1.5em;
   font-weight: bold;
   color: #5a5a5a;
   line-height: 1.7em;
}
.hern-kiosk__menu-page-product-category-image {
   width: 12em;
   height: 12em;
}
.hern-kiosk__menu-category-banner-img {
   min-height: 120px;
   width: 100%;
   max-height: 150px;
   margin: 1em 0;
}
.hern-kiosk__menu-product-type {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em 0;
}
.hern-kiosk__menu-product-type-radio-btn {
   font-size: 23px;
   padding: 0.5em;
   min-width: 7em;
   text-align: center;
   height: auto;
}
// menu part where products are being show
.hern-kiosk__menu-header {
   height: 9em;
   background: transparent;
}

.hern-kiosk__menu-header-row {
   height: 100%;
}
.hern-kiosk__menu-header-heading {
   text-align: center;
   font-size: 3.5em;
   font-weight: 700;
}
.hern-kiosk__menu-header-additional-options {
   display: flex;
   justify-content: center;
   align-items: center;
}
/* ... */

